--- a/frontend-list/src/scenes/UserProfile/UserProfile.scss
+++ b/frontend-list/src/scenes/UserProfile/UserProfile.scss
@@ -31,13 +31,17 @@
   }
   .info {
     position: absolute;
-    top: 40%;
+    top: 50%;
     width: 100%;
-    display: -webkit-flex;
     display: flex;
-    width: 90%;
+    width: 100%;
     z-index: 2;
-    margin: 0 10%;
+    margin: 0 calc(50% - 263px/2);
+    .title{
+        font-size: 32px;
+        text-align: center;
+        margin-top: 10px;
+    }
     .info-list{
       text-overflow: ellipsis;
       width: 263px;
@@ -52,7 +56,6 @@
     }
     img {
       width: 263px;
-      height: 400px;
     }
     .detail {
       .title {
